--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="qui">
 
         <H2>
-            pourquoi devenir dev
+            pourquoi devenir développeur
         </H2>
     </div>
     <div id="encadrement">
