--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             dedans etait la création/le développement.
             </p>
             <p>
-                et ayant eu la chance de me remettre au developpement en décembre j'ai adoré ça. j'ai enfin pu me rendre compte que dans le developpement j'etait comme un poisson dans l'eau
+                Et ayant eu la chance de me remettre au developpement en décembre j'ai adoré ça. 
+                j'ai enfin pu me rendre compte que dans le developpement j'etait comme un poisson dans l'eau.
                 </P>
                 <P>
-                    même si j'ai du mal avec la partie graphique (css/html) je m'amuse beaucoup a chercher des solution
-                    et les adaptés
+                   Ce qui me plait aussi c'est que chaque projet chaque chose dans ce domaine revient a aphréender de nouvelle méthode de travail d'évoluer a chaque seconde
                 </P>
                 et au cours de mes 22 printemps j'ai déja utiliser les languages C# /c++ / C / js / html / css / php /
                 mySQL /
