--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="encadrement">
         <div id="presentation">
             <p>
-            avant de m'orienter vers le developpement j'etait automaticien. Au bout d'un an, je me suis rendu compte que la seul chose qui me plaisait 
+            Avant de m'orienter vers le developpement j'etait automaticien. Au bout d'un an, je me suis rendu compte que la seul chose qui me plaisait 
             dedans etait la création/le développement.
             </p>
             <p>
@@ -46,9 +46,10 @@
                 j'ai enfin pu me rendre compte que dans le developpement j'etait comme un poisson dans l'eau.
                 </P>
                 <P>
-                   Ce qui me plait aussi c'est que chaque projet chaque chose dans ce domaine revient a aphréender de nouvelle méthode de travail d'évoluer a chaque seconde
+                   Ce qui me plait aussi c'est que chaque projet chaque chose dans ce domaine revient a appréhender 
+                   de nouvelle méthode de travail d'évoluer a chaque seconde.
                 </P>
-                et au cours de mes 22 printemps j'ai déja utiliser les languages C# /c++ / C / js / html / css / php /
+                Et au cours de mes 22 printemps j'ai déja utiliser les languages C# /c++ / C / js / html / css / php /
                 mySQL /
 
         </div>
